--- a/css/modules/_svganimations.scss
+++ b/css/modules/_svganimations.scss
@@ -6,7 +6,12 @@ svg { pointer-events: none; }
 	max-width: 100%;
 	opacity: 0;
 	display: block;
-	margin: 0 auto;
+	margin: auto;
+	position: absolute;
+	top: 0;
+	//bottom: 0;
+	left: 0;
+	right: 0;	
 	&:hover {
 	  opacity: 1;
   	}
@@ -19,10 +24,11 @@ svg { pointer-events: none; }
 }
 
 .line-drawing {
-	position: absolute;
-	top: 0;
-	left: 0;
-	right: 0;
+	//position: absolute;
+	//top: 0;
+	//bottom: 0;
+	//left: 0;
+	//right: 0;
 	margin: auto;
 	max-width: 300px;
 	path {
