--- a/css/modules/_workitems.scss
+++ b/css/modules/_workitems.scss
@@ -35,6 +35,7 @@
 	&__drawings {
 		height: 300px;
 		margin: 0 auto;
+		position: relative;
 	}
 	&:hover {
 		transition: all 500ms;
